.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Job_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipLabel>Templated Job Tags</relationshipLabel>
        <relationshipName>Templated_Job_Tags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Job__c</fullName>
        <label>Templated Job</label>
        <referenceTo>sked__Templated_Job__c</referenceTo>
        <relationshipLabel>Templated Job Tags</relationshipLabel>
        <relationshipName>Templated_Job_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Weighting__c</fullName>
        <label>Weighting</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Templated Job Tag</label>
    <nameField>
        <displayFormat>TJT-{0000}</displayFormat>
        <label>Templated Job Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__Weighting_mutex_not_required</fullName>
        <active>true</active>
        <description>A Templated Job Tag must have a weighting if it&apos;s marked as not &apos;required&apos;</description>
        <errorConditionFormula>AND(ISNULL(sked__Weighting__c), NOT(sked__Required__c))</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>A Templated Job Tag must have a weighting if it&apos;s marked as not &apos;required&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Weighting_mutex_required</fullName>
        <active>true</active>
        <description>A Templated Job Tag cannot have a weighting if it&apos;s marked &apos;required&apos;</description>
        <errorConditionFormula>AND( NOT(ISNULL(sked__Weighting__c)),  sked__Required__c )</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>A Templated Job Tag cannot have a weighting if it&apos;s marked &apos;required&apos;</errorMessage>
    </validationRules>
</CustomObject>